package example.designpattern.structural.bridge;

/**
 * Created by lys on 3/9/2018.
 *
 * @author lys
 * @version 3.0.0-SNAPSHOT
 * @since 3.0.0-SNAPSHOT
 */
public interface ImageImp {
    void doPaint(Matrix m);//显示像素矩阵m
}
