package example.designpattern.structural.bridge;

//像素矩阵类：辅助类，各种格式的文件最终都被转化为像素矩阵，不同的操作系统提供不同的方式显示像素矩阵
class Matrix {  
    //此处代码省略  
}  